# trailerdb

./: .env.example  .gitignore  README.md  requirements.txt  wrangler.toml
.github/ISSUE_TEMPLATE/: add-movie.yml
.github/workflows/: daily-update.yml  deploy.yml  phase7-shard.yml  process-movie-request.yml
cli/: README.md  pyproject.toml
cli/src/trailerdb_cli/: __init__.py  client.py  display.py  local.py  main.py
db/: trailerdb.db
pipeline/: add_single_movie.py  config.py  db.py  job_tracker.py  phase0_bootstrap.py  phase1_resolve.py  phase2a_videos_en.py  phase2b_videos_multi.py  phase3_yt_enrich.py  phase4_yt_search.py  phase5_series_bootstrap.py  phase6_series_videos.py  phase7_subtitle_audio.py  phase7a_top_movies.py  phase8_comments.py  phase8a_comments_top.py  phase9_sentiment.py  rate_limiter.py  run.py  type_classifier.py
scripts/: compute_analytics.py  daily_update.py  daily_update_d1.py  export.py  export_all.py  export_csv.py  export_from_d1.py  export_parquet.py  export_sqlite.py  group_trailers.py  import_d1.py  import_d1_v2.py  phase7_shard.py
site/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
site/public/: 404.html  CNAME  llms.txt  robots.txt  sitemap-1.xml  sitemap-2.xml  sitemap-3.xml  sitemap-index.xml
site/public/data/: analytics.json  series-index.json  stats.json  trending.json
site/src/: App.tsx  arquero.d.ts  main.tsx
site/src/components/: Badge.tsx  CodeBlock.tsx  ContributeForm.tsx  Footer.tsx  GenreCard.tsx  Header.tsx  HorizontalScroll.tsx  LanguageTabs.tsx  (+12 more)
worker/: index.js
(+134129 files in other folders)
